- Added model to MVC.  - updated controllers to use model.  - updated getDisturbanceEventsSummaryByRegion() to return an array of RegionSummary objects.
